--- a/SplitLanding/style.css
+++ b/SplitLanding/style.css
@@ -21,7 +21,7 @@ body {
 
 h1 {
 	font-size: 4rem;
-	color: white;
+	color: #fff;
 	position: absolute;
 	left: 50%;
 	top: 20%;
@@ -38,8 +38,8 @@ h1 {
 	padding-top: 1.3rem;
 	width: 15rem;
 	text-align: center;
-	color: white;
-	border: white solid 0.2rem;
+	color: #fff;
+	border: #fff solid 0.2rem;
 	font-size: 1rem;
 	font-weight: bold;
 	text-transform: uppercase;
@@ -79,7 +79,7 @@ h1 {
 
 .split.left:before {
 	position: absolute;
-	content: '';
+	content: "";
 	width: 100%;
 	height: 100%;
 	background: var(--left-bg-color);
@@ -93,7 +93,7 @@ h1 {
 
 .split.right:before {
 	position: absolute;
-	content: '';
+	content: "";
 	width: 100%;
 	height: 100%;
 	background: var(--right-bg-color);
@@ -128,4 +128,20 @@ h1 {
 
 .hover-right .left:before {
 	z-index: 2;
+}
+
+@media (max-width: 800px) {
+	h1 {
+		font-size: 2rem;
+	}
+
+	.button {
+		width: 12rem;
+	}
+}
+
+@media (max-height: 700px) {
+	.button {
+		top: 70%;
+	}
 }
